--- a/public/indexing.html
+++ b/public/indexing.html
@@ -32,7 +32,8 @@
     <script>  
     $(function(){ 
      $("#header").load("nav.html");
-            $("#foot").load("foot.html");
+             $("#foot").load("foot.html");
+            $("#shead").load("snav.html");
       
     }); 
     </script>
@@ -73,33 +74,9 @@
         </div>
 
         <div class="col-md-3 d-md-none">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand logo"><img src="bpit-images/logo_ICCIN_2020-removebg-preview.png"
-                        height="50px"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav justify-content-around">
-                        <a class="nav-item nav-link " href="index.html">Home</a>
-                        <a class="nav-item nav-link" href="cfp.html">Call for Paper</a>
-                        <a class="nav-item nav-link" href="speakers.html">Keynote Speakers</a>
-                        <a class="nav-item nav-link" href="tpc.html">Technical Program Committee </a>
-                        <a class="nav-item nav-link col-khaki" href="indexing.html">Indexing</a>
-                        <a class="nav-item nav-link" href="dates.html">Important Dates </a>
-                        <a class="nav-item nav-link" href="registration.html">Registration </a>
-                        <a class="nav-item nav-link" href="instruction.html">Instruction for Authors</a>
-                        <a class="nav-item nav-link" href="venue.html">Venue</a>
-                        <a class="nav-item nav-link" href="Accomodation.html">Accommodation </a>
-                        <a class="nav-item nav-link" href="travel.html">Travel & E-Visa </a>
-                        <a class="nav-item nav-link" href="contact.html">Contact Us </a>
-                        <a class="nav-item nav-link" href="help.html">Helpdesk </a>
-                        <a class="nav-item nav-link" href="pay.html">Payment Info</a>
-                        <a class="nav-item nav-link" href="gallery1.html">Gallery</a>
-                    </div>
-                </div>
-            </nav>
+               <!-- Small Header-->
+          <div id="shead"></div>
+          <!-- Small Header-->
         </div>
 
         <div class="col-md-9">
