--- a/public/nav.html
+++ b/public/nav.html
@@ -8,9 +8,9 @@
                     <li class="nav-item">
                         <a class="nav-link  h5" href="cfp.html">Call for Paper</a>
                     </li>
-                    <li class="nav-item">
+                   <!-- <li class="nav-item">
                         <a class="nav-link  h5" href="speakers.html">Keynote Speakers</a>
-                    </li>
+                    </li>  -->
                     <li class="nav-item">
                         <a class="nav-link  h5" href="tpc.html">Technical Program Committee </a>
                     </li>
@@ -38,7 +38,7 @@
                     </li>
 
                     <li class="dropdown nav-item">
-                        <span class="nav-link h5">Previous Confrences <i class="arrow down"></i> </span>
+                        <span class="nav-link h5">Previous Conferences <i class="arrow down"></i> </span>
                         <div class="dropdown-content">
                         <a href="2020/index.html"><p>ICCIN-2020</p></a>
                         </div>
