--- a/public/cfp.html
+++ b/public/cfp.html
@@ -115,9 +115,10 @@ $(function(){
                 Journal of Statistics & Management Systems (JSMS) (ISSN: 0972-0510).</div>
 
 
-            <div class="h4 pt-5  container text-center">Springer Series<br>
+            <div class="h4 pt-5  container text-center">Springer Series *<br>
 
-                All Selected papers will be submitted for publication in Springer LNNS Series, Scopus Indexed</div>
+                All Selected papers will be submitted for publication in Springer LNNS Series, Scopus Indexed </div>
+                <div class="text-center">(* Approval Pending)</div>
             <div class="pt-5 px-5 text-center offer-txt">
                 Prospective authors are invited to submit high-quality papers representing original results in the
                 emerging
