--- a/public/tpc.html
+++ b/public/tpc.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="col-md-3 ">
                         <div class="h4 my-3 text-center"><img class="" src="bpit-images/trust4.png"></div>
-                        <div class="text-center pt-3 h5">Sh. Jagdish Prasad<br><span class="thin-font">Treasure</span>
+                        <div class="text-center pt-3 h5">Sh. Jagdish Prasad<br><span class="thin-font">Treasurer</span>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -172,7 +172,7 @@
             <div class="container pt-3">
                 <div class="d-flex row">
                     <div class="h5 text-center py-3 py-md-0 col-md-6">Dr. Vishal Khatri</div>
-                    <div class="h5 text-center py-3 py-md-0  col-md-6">Mr. Suman</div>
+                    <div class="h5 text-center py-3 py-md-0  col-md-6">Dr. Suman</div>
                 </div>
             </div>
 
