--- a/public/gallery1.html
+++ b/public/gallery1.html
@@ -123,7 +123,7 @@
                     <div class="swiper-button-prev swiper-button-white"></div>
                 </div>
                 <div class="swiper-container gallery-thumbs">
-                    <div class="swiper-wrapper justify-content-around">
+                    <div class="swiper-wrapper">
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/2014.png);"></div>
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/20141.png);"></div>
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/20142.png);"></div>
