--- a/public/cfp.html
+++ b/public/cfp.html
@@ -103,16 +103,16 @@ $(function(){
 
                 A great opportunity for the authors to publish their work in two different series ICCIN-2021 <span
                     class="font-weight-bold">ESCI
-                    series </span> or ICCIN-202 <span class="font-weight-bold">SPRINGER series </span> or both one
+                    series </span> or ICCIN-2021 <span class="font-weight-bold">SPRINGER series </span> or both one
                 desk.
             </div>
             <div class="h4  container text-center ">ESCI Series<br>
 
                 All Selected papers will be published in ESCI Journal (Taylor & Francis):<br>
 
-                Journal of Information & Optimization Sciences (JIOS) (ISSN: 0252-2667) and<br>
+                Journal of Discrete Mathematical Sciences & Cryptography (JDMSC)(ISSN No. 2169-0065) and<br>
 
-                Journal of Statistics & Management Systems (JSMS) (ISSN: 0972-0510).</div>
+                Journal of Interdisciplinary Mathematics (JIM) (ISSN No.  2169-012X).</div>
 
 
             <div class="h4 pt-5  container text-center">Springer Series *<br>
@@ -143,7 +143,7 @@ $(function(){
 
                         <div class="fea-ico text-center"><i class="fas fa-not-equal"></i>
                         </div>
-                        <div class="h5 my-3  text-center px-2">Applied Discrete Mathematics (JIDMSC) (T&F)</div>
+                        <div class="h5 my-3  text-center px-2">Applied Discrete Mathematics  (T&F)</div>
 
 
                     </div>
@@ -178,7 +178,7 @@ $(function(){
 
                         <div class="fea-ico text-center"><i class="fas fa-brain"></i>
                         </div>
-                        <div class="h5 my-3  text-center px-2">Cognitive Sciences (JIM) (T & F)</div>
+                        <div class="h5 my-3  text-center px-2">Cognitive Sciences <br> (T & F)</div>
 
 
                     </div>
@@ -221,7 +221,7 @@ $(function(){
 
                         <div class="fea-ico text-center"><i class="fas fa-not-equal"></i>
                         </div>
-                        <div class="h5 my-3  text-center px-2">Fuzzy Mathematics(JIM)(T &F)</div>
+                        <div class="h5 my-3  text-center px-2">Fuzzy Mathematics<br>(T & F)</div>
 
 
                     </div>
