--- a/public/tpc.html
+++ b/public/tpc.html
@@ -155,6 +155,9 @@
             </div>
             <div class="text-center font-weight-bold pt-5 h3">Convenor</div>
             <div class="text-center pt-3 h5">Prof. Deepali Virmani</div>
+
+            <div class="text-center font-weight-bold pt-5 h3">Research Chair</div>
+            <div class="text-center pt-3 h5">Dr. Prateek Aggarwal</div>
            
 
             <div class="text-center pt-5  font-weight-bold h3">Organizing Committee</div>
