--- a/public/contact.html
+++ b/public/contact.html
@@ -90,7 +90,7 @@ $(function(){
                             <div class="offer-txt text-justify mt-5 py-5 h4 px-5">
                                 <span class="h4 font-weight-bold ">E-mail: </span> iccin2021@gmail.com <br><br>
                                 <span class="h4 font-weight-bold">Phone Number(s):</span><br>Dr. Bhawna Suri - 9810322072 <br> Dr. Shweta Taneja - 9212388121<br><br>
-                                <span class="h4 font-weight-bold">Address: </span> PSP-4, Dr KN Katju Marg, Sector-17,
+                                <span class="h4 font-weight-bold">Address: </span>Bhagwan Parshuram Institute of Technology, PSP-4, Dr KN Katju Marg, Sector-17,
                                 Rohini, New Delhi, Delhi 110089<br><br>
                             </div>
                         </div>
