--- a/public/gallery1.html
+++ b/public/gallery1.html
@@ -74,7 +74,7 @@
             <div class="display-2 text-center font-weight-bold py-5">Gallery</div>
             <div class="site-wrap bg-dark">
                 <div class="swiper-container gallery-top">
-                    <div class="swiper-wrapper ">
+                    <div class="swiper-wrapper">
                         <div class="swiper-slide cover" style="background-image: url('bpit-images/2014.png');">
 
                         </div>
@@ -107,43 +107,40 @@
                         <div class="swiper-slide cover"
                             style="background-image: url('bpit-images/IMG_9239-min.png'); ">
                         </div>
-                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020.png');">
+                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020.PNG');">
 
                         </div>
-                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-1.png');">
+                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-1.PNG');">
 
                         </div>
-                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-2.png');"></div>
-                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-3.png');"></div>
-                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-4.png');"></div>
-                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-5.png');"></div>
+                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-2.PNG');"></div>
+                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-3.PNG');"></div>
+                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-4.PNG');"></div>
+                        <div class="swiper-slide cover" style="background-image: url('bpit-images/2020-5.PNG');"></div>
                     </div>
 
                     <div class="swiper-button-next swiper-button-white"></div>
                     <div class="swiper-button-prev swiper-button-white"></div>
                 </div>
                 <div class="swiper-container gallery-thumbs">
-                    <div class="swiper-wrapper">
+                    <div class="swiper-wrapper ">
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/2014.png);"></div>
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/20141.png);"></div>
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/20142.png);"></div>
                        
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/21044.png);"></div>
                         <div class="swiper-slide cover" style="background-image:url(bpit-images/2018.png);"></div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_9058-min.png);">
-                        </div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_8966-min.png);">
-                        </div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_9122-min.png);">
-                        </div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_9239-min.png);">
-                        </div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020.png);"></div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-1.png);"></div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-2.png);"></div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-3.png);"></div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-4.png);"></div>
-                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-5.png);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_9058-min.png);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_8966-min.png);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_9122-min.png);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/IMG_9239-min.png);"></div>
+
+                    <div class="swiper-slide cover" style="background-image:url(bpit-images/2020.PNG);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-1.PNG);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-2.PNG);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-3.PNG);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-4.PNG);"></div>
+                        <div class="swiper-slide cover" style="background-image:url(bpit-images/2020-5.PNG);"></div>
                     </div>
                 </div>
             </div> <!-- .site-wrap -->
